crates/keron-lang/tests/corpus/errors/check/map_heterogeneous_keys.keron
val m = {"a": 1, 2: 2}
